# oifw

./: .gitmodules  BorderRadius.h  CMakeLists.txt  FluentStyle.cpp  FluentStyle.h  bannerwidget.cpp  bannerwidget.h  footerwidget.cpp  footerwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
qt-static/: build.sh
